--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="hero">
             <div class="hero__left hero__left--offset">
                 <div class="hero__text">
-                    <h1 class="hero__h1 h1">Функциональное
+                    <h1 class="hero__h1 h1 hero__h1--margin">Функциональное
                         питание для котов</h1>
                     <h3 class="hero__h3 h3">Занялся собой? Займись котом!</h3>
                     <a href="#" class="hero__button">подобрать программу</a>
@@ -89,20 +89,19 @@
                 </div>
                 <ul class="h-nav__menu ">
                     <li class="h-nav__menu-item h-nav__menu-item--white">
-                        <a class="h-nav__menu-link h-nav__menu-item1 h3" href="#home">главная</a>
+                        <a class="h-nav__menu-link h-nav__menu-link--decoration h3" href="#home">главная</a>
                     </li>
-                    <li class="h-nav__menu-item h-nav__menu-item--white">
-                        <a class="h-nav__menu-link h-nav__menu-item2 h3">Каталог продукции</a>
+                    <li class="h-nav__menu-item h-nav__menu-item--white h-nav__menu-item--white ">
+                        <a class="h-nav__menu-link h-nav__menu-link--decoration  h3">Каталог продукции</a>
                     </li>
-                    <li class="h-nav__menu-item h-nav__menu-item--white">
-                        <a class="h-nav__menu-link h-nav__menu-item3 h3">подбор программы</a>
+                    <li class="h-nav__menu-item h-nav__menu-item--white h-nav__menu-item--white ">
+                        <a class="h-nav__menu-link h-nav__menu-link--decoration h3">подбор программы</a>
                     </li>
                 </ul>
             </div>
         </nav>    
     </header>
     <main>
-      
     </main>
     <footer>
     </footer>
