--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
                 <div class="hero__text">
                     <h1 class="hero__h1 h1 hero__h1--margin">Функциональное
                         питание для котов</h1>
-                    <h3 class="hero__h3 h3">Занялся собой? Займись котом!</h3>
-                    <a href="#" class="hero__button">подобрать программу</a>
+                    <h3 class="hero__h3 hero__h3--margin h3">Занялся собой? Займись котом!</h3>
+                    <div class="hero__text-button-wrapper h3">
+                        <a href="#" class="hero__text-button">подобрать программу</a>
+                    </div>
                 </div>
             </div>
             <div class="hero__right">
@@ -89,13 +91,19 @@
                 </div>
                 <ul class="h-nav__menu ">
                     <li class="h-nav__menu-item h-nav__menu-item--white">
-                        <a class="h-nav__menu-link h-nav__menu-link--decoration h3" href="#home">главная</a>
+                        <a class="h-nav__menu-link h-nav__menu-link--decoration h3" href="#home">
+                            <p class="h-nav__menu-text">главная</p>
+                           </a>
                     </li>
-                    <li class="h-nav__menu-item h-nav__menu-item--white h-nav__menu-item--white ">
-                        <a class="h-nav__menu-link h-nav__menu-link--decoration  h3">Каталог продукции</a>
+                    <li class="h-nav__menu-item h-nav__menu-item--white">
+                        <a class="h-nav__menu-link h-nav__menu-link--decoration h3" href="#home">
+                            <p class="h-nav__menu-text">каталог продукции</p>
+                           </a>
                     </li>
-                    <li class="h-nav__menu-item h-nav__menu-item--white h-nav__menu-item--white ">
-                        <a class="h-nav__menu-link h-nav__menu-link--decoration h3">подбор программы</a>
+                    <li class="h-nav__menu-item h-nav__menu-item--white">
+                        <a class="h-nav__menu-link h-nav__menu-link--decoration h3" href="#home">
+                            <p class="h-nav__menu-text">подбор программы</p>
+                           </a>
                     </li>
                 </ul>
             </div>
